Bug 476521 - Indicate source of path mappings
Change-Id: I88df6c5b7fc5cceb86c00e747989a9d47bbc7d76
Signed-off-by: Dariusz Michura <dariusz.m@zend.com>