@@ -31,7 +31,7 @@ import org.eclipse.dltk.core.environment.IEnvironment;
 import org.eclipse.php.internal.core.PHPCorePlugin;
 import org.eclipse.php.internal.core.documentModel.provisional.contenttype.ContentTypeIdForPHP;
 import org.eclipse.php.internal.core.includepath.IncludePath;
-import org.eclipse.php.internal.core.util.*;
+import org.eclipse.php.internal.core.util.PHPSearchEngine;
 import org.eclipse.php.internal.core.util.PHPSearchEngine.ExternalFileResult;
 import org.eclipse.php.internal.core.util.PHPSearchEngine.IncludedFileResult;
 import org.eclipse.php.internal.core.util.PHPSearchEngine.ResourceResult;
@@ -39,6 +39,7 @@ import org.eclipse.php.internal.core.util.PHPSearchEngine.Result;
 import org.eclipse.php.internal.debug.core.IPHPDebugConstants;
 import org.eclipse.php.internal.debug.core.PHPDebugPlugin;
 import org.eclipse.php.internal.debug.core.pathmapper.PathEntry.Type;
+import org.eclipse.php.internal.debug.core.pathmapper.PathMapper.Mapping.MappingSource;
 import org.eclipse.php.internal.debug.core.zend.model.PHPDebugTarget;
 import org.eclipse.ui.*;
 import org.eclipse.ui.ide.FileStoreEditorInput;
@@ -125,17 +126,19 @@ public class DebugSearchEngine {
 						currentWorkingDir, currentScriptDir, project);
 				if (result instanceof ExternalFileResult) {
 					ExternalFileResult extFileResult = (ExternalFileResult) result;
-					return new PathEntry(extFileResult.getFile()
-							.getAbsolutePath(), Type.EXTERNAL,
-							extFileResult.getContainer());
+					return new PathEntry(
+							extFileResult.getFile().getAbsolutePath(),
+							Type.EXTERNAL, extFileResult.getContainer());
 				}
 				if (result instanceof IncludedFileResult) {
 					IncludedFileResult incFileResult = (IncludedFileResult) result;
 					IBuildpathEntry container = incFileResult.getContainer();
-					Type type = (container.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) ? Type.INCLUDE_VAR
-							: Type.INCLUDE_FOLDER;
-					return new PathEntry(incFileResult.getFile()
-							.getAbsolutePath(), type, container);
+					Type type = (container
+							.getEntryKind() == IBuildpathEntry.BPE_VARIABLE)
+									? Type.INCLUDE_VAR : Type.INCLUDE_FOLDER;
+					return new PathEntry(
+							incFileResult.getFile().getAbsolutePath(), type,
+							container);
 				}
 				if (result != null) {
 					// workspace file
@@ -209,7 +212,7 @@ public class DebugSearchEngine {
 					return Status.OK_STATUS;
 				}
 
-				LinkedList<PathEntry> results = new LinkedList<PathEntry>();
+				List<PathEntry> results = new LinkedList<PathEntry>();
 
 				IncludePath[] includePaths;
 				IBuildpathEntry[] buildPaths = null;
@@ -258,13 +261,14 @@ public class DebugSearchEngine {
 							if (includePath.getEntry() instanceof IContainer) {
 								IContainer container = (IContainer) includePath
 										.getEntry();
-								if (container.getFullPath().isPrefixOf(
-										file.getFullPath())) {
-									localFile[0] = new PathEntry(file
-											.getFullPath().toString(),
+								if (container.getFullPath()
+										.isPrefixOf(file.getFullPath())) {
+									localFile[0] = new PathEntry(
+											file.getFullPath().toString(),
 											Type.WORKSPACE, file.getParent());
 									pathMapper.addEntry(remoteFile,
-											localFile[0]);
+											localFile[0],
+											MappingSource.ENVIRONMENT);
 									PathMapperRegistry.storeToPreferences();
 									return Status.OK_STATUS;
 								}
@@ -289,22 +293,28 @@ public class DebugSearchEngine {
 							IEnvironment environment = EnvironmentManager
 									.getEnvironment(currentProject);
 							IPath remoteFilePath = EnvironmentPathUtils
-									.getFullPath(environment, new Path(
-											remoteFile));
+									.getFullPath(environment,
+											new Path(remoteFile));
 							for (IBuildpathEntry entry : rawBuildpath) {
 								IPath entryPath = entry.getPath();
-								if (entry.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
+								if (entry
+										.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
 									entryPath = DLTKCore
 											.getResolvedVariablePath(entryPath);
 								}
 								if (entryPath != null
-										&& (entryPath.isPrefixOf(Path
-												.fromOSString(remoteFile)) || entryPath
+										&& (entryPath
+												.isPrefixOf(Path.fromOSString(
+														remoteFile))
+										|| entryPath
 												.isPrefixOf(remoteFilePath))) {
-									Type type = (entry.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) ? Type.INCLUDE_VAR
-											: Type.INCLUDE_FOLDER;
+									Type type = (entry
+											.getEntryKind() == IBuildpathEntry.BPE_VARIABLE)
+													? Type.INCLUDE_VAR
+													: Type.INCLUDE_FOLDER;
 									localFile[0] = new PathEntry(
-											file.getAbsolutePath(), type, entry);
+											file.getAbsolutePath(), type,
+											entry);
 									// pathMapper.addEntry(remoteFile,
 									// localFile[0]);
 									// PathMapperRegistry.storeToPreferences();
@@ -321,18 +331,21 @@ public class DebugSearchEngine {
 							IBuildpathEntry entry = (IBuildpathEntry) includePath
 									.getEntry();
 							IPath entryPath = entry.getPath();
-							if (entry.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
+							if (entry
+									.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
 								entryPath = DLTKCore
 										.getResolvedVariablePath(entryPath);
 							}
-							if (entryPath != null
-									&& entryPath.isPrefixOf(Path
-											.fromOSString(remoteFile))) {
-								Type type = (entry.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) ? Type.INCLUDE_VAR
-										: Type.INCLUDE_FOLDER;
+							if (entryPath != null && entryPath.isPrefixOf(
+									Path.fromOSString(remoteFile))) {
+								Type type = (entry
+										.getEntryKind() == IBuildpathEntry.BPE_VARIABLE)
+												? Type.INCLUDE_VAR
+												: Type.INCLUDE_FOLDER;
 								localFile[0] = new PathEntry(
 										file.getAbsolutePath(), type, entry);
-								pathMapper.addEntry(remoteFile, localFile[0]);
+								pathMapper.addEntry(remoteFile, localFile[0],
+										MappingSource.ENVIRONMENT);
 								PathMapperRegistry.storeToPreferences();
 								return Status.OK_STATUS;
 							}
@@ -345,18 +358,21 @@ public class DebugSearchEngine {
 					for (IBuildpathEntry entry : buildPaths) {
 
 						IPath entryPath = entry.getPath();
-						if (entry.getEntryKind() == IBuildpathEntry.BPE_LIBRARY) {
+						if (entry
+								.getEntryKind() == IBuildpathEntry.BPE_LIBRARY) {
 							// We don't support lookup in archive
 							File entryDir = entryPath.toFile();
 							find(entryDir, abstractPath, entry, results);
-						} else if (entry.getEntryKind() == IBuildpathEntry.BPE_PROJECT
+						} else if (entry
+								.getEntryKind() == IBuildpathEntry.BPE_PROJECT
 								|| entry.getEntryKind() == IBuildpathEntry.BPE_SOURCE) {
 							IResource res = ResourcesPlugin.getWorkspace()
 									.getRoot()
 									.findMember(entry.getPath().lastSegment());
 							if (res instanceof IProject) {
 								IProject project = (IProject) res;
-								if (project.isOpen() && project.isAccessible()) {
+								if (project.isOpen()
+										&& project.isAccessible()) {
 									try {
 										find(project, abstractPath, results);
 									} catch (InterruptedException e) {
@@ -364,14 +380,16 @@ public class DebugSearchEngine {
 									}
 								}
 							}
-						} else if (entry.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
+						} else if (entry
+								.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) {
 							entryPath = DLTKCore
 									.getResolvedVariablePath(entryPath);
 							if (entryPath != null) {
 								File entryDir = entryPath.toFile();
 								find(entryDir, abstractPath, entry, results);
 							}
-						} else if (entry.getEntryKind() == IBuildpathEntry.BPE_CONTAINER) {
+						} else if (entry
+								.getEntryKind() == IBuildpathEntry.BPE_CONTAINER) {
 
 							try {
 								if (projects.length == 0) {
@@ -421,25 +439,39 @@ public class DebugSearchEngine {
 
 				// search in opened editors
 				searchOpenedEditors(results, abstractPath);
+				// Remove duplicated entries
+				results = new LinkedList<PathEntry>(
+						new LinkedHashSet<PathEntry>(results));
 
-				if (!foundInWorkspace
-						&& results.size() == 1
-						&& abstractPath.equals(results.getFirst()
-								.getAbstractPath())) {
-					localFile[0] = results.getFirst();
+				if (!foundInWorkspace && results.size() == 1 && abstractPath
+						.equals(results.get(0).getAbstractPath())) {
+					localFile[0] = results.get(0);
 				} else if (results.size() > 0) {
-					Collections.sort(results, new BestMatchPathComparator(
-							abstractPath));
-					localFile[0] = filterItems(abstractPath,
-							results.toArray(new PathEntry[results.size()]),
+					Collections.sort(results,
+							new BestMatchPathComparator(abstractPath));
+
+					results = preFilterItems(abstractPath, results,
 							debugTarget);
+					boolean isSingleMatch = results.size() == 1;
+
+					if (isSingleMatch) {
+						localFile[0] = results.get(0);
+					} else {
+						localFile[0] = filterItems(abstractPath,
+								results.toArray(new PathEntry[results.size()]),
+								debugTarget);
+					}
 					if (localFile[0] != null) {
 						if (localFile[0].getType() == Type.SERVER) {
-							pathMapper.addServerEntry(remoteFile, localFile[0]);
+							pathMapper.addServerEntry(remoteFile, localFile[0],
+									isSingleMatch ? MappingSource.ENVIRONMENT
+											: MappingSource.USER);
 							PathMapperRegistry.storeToPreferences();
 							localFile[0] = null;
 						} else {
-							pathMapper.addEntry(remoteFile, localFile[0]);
+							pathMapper.addEntry(remoteFile, localFile[0],
+									isSingleMatch ? MappingSource.ENVIRONMENT
+											: MappingSource.USER);
 							PathMapperRegistry.storeToPreferences();
 						}
 					}
@@ -457,7 +489,99 @@ public class DebugSearchEngine {
 		return localFile[0];
 	}
 
-	private static void searchOpenedEditors(LinkedList<PathEntry> results,
+	private static List<PathEntry> preFilterItems(VirtualPath remotePath,
+			List<PathEntry> entries, IDebugTarget debugTarget) {
+		final List<PathEntry> filtered = new LinkedList<PathEntry>();
+		final List<PathEntry> mostMatchEntries = getMostMatchEntries(entries,
+				remotePath);
+		PathEntry matchByConfig = null;
+		if (mostMatchEntries.size() == 0 || mostMatchEntries.size() > 1) {
+			matchByConfig = getMatchFromLaunchConfiguration(entries,
+					debugTarget.getLaunch().getLaunchConfiguration());
+		}
+		if (mostMatchEntries.size() == 1) {
+			filtered.add(mostMatchEntries.get(0));
+		} else if (matchByConfig != null) {
+			filtered.add(matchByConfig);
+		} else {
+			// Nothing was pre-filtered
+			return entries;
+		}
+		return filtered;
+	}
+
+	private static PathEntry getMatchFromLaunchConfiguration(
+			List<PathEntry> entries, ILaunchConfiguration launchConfiguration) {
+		try {
+			String projectName = launchConfiguration.getAttribute(
+					IPHPDebugConstants.PHP_Project, (String) null);
+			if (projectName != null) {
+				IProject project = ResourcesPlugin.getWorkspace().getRoot()
+						.getProject(projectName);
+				for (PathEntry pathEntry : entries) {
+					Object container = pathEntry.getContainer();
+					if (container instanceof IContainer) {
+						IProject p = ((IContainer) container).getProject();
+						if (p != null && p.equals(project)) {
+							return pathEntry;
+						}
+					}
+				}
+			}
+		} catch (CoreException e) {
+			// log exception and continue debugging
+			PHPDebugPlugin.log(e);
+		}
+		return null;
+	}
+
+	private static List<PathEntry> getMostMatchEntries(List<PathEntry> entries,
+			VirtualPath remotePath) {
+		if (remotePath.getSegmentsCount() == 1) {
+			return entries;
+		}
+		Map<Integer, List<PathEntry>> map = new HashMap<Integer, List<PathEntry>>();
+		int mostMatchSegmentsNumber = 1;
+		for (int i = 0; i < entries.size(); i++) {
+			PathEntry pathEntry = entries.get(i);
+			VirtualPath virtualPath = pathEntry.getAbstractPath();
+			int matchSegmentsNumber = getMatchSegmentsNumber(virtualPath,
+					remotePath);
+			if (matchSegmentsNumber > mostMatchSegmentsNumber) {
+				mostMatchSegmentsNumber = matchSegmentsNumber;
+			}
+			List<PathEntry> list = map.get(matchSegmentsNumber);
+			if (list == null) {
+				list = new ArrayList<PathEntry>();
+				map.put(matchSegmentsNumber, list);
+			}
+			list.add(pathEntry);
+
+		}
+		List<PathEntry> mostMatchList = map.get(mostMatchSegmentsNumber);
+		return mostMatchList;
+	}
+
+	private static int getMatchSegmentsNumber(VirtualPath virtualPath,
+			VirtualPath remotePath) {
+		int i = virtualPath.getSegmentsCount();
+		if (i > remotePath.getSegmentsCount()) {
+			i = remotePath.getSegmentsCount();
+		}
+		int result = 0;
+		// compare last i segments.
+		for (int j = i - 1; j >= 0; j--) {
+			if (virtualPath.getSegments()[j
+					+ (virtualPath.getSegmentsCount() - i)]
+							.equals(remotePath.getSegments()[j
+									+ (remotePath.getSegmentsCount() - i)])) {
+				result++;
+			}
+		}
+		return result;
+	}
+
+	private static void searchOpenedEditors(List<PathEntry> results,
 			VirtualPath remotePath) {
 		// Collect open editor references:
 		List<IEditorReference> editors = new ArrayList<IEditorReference>(0);
@@ -481,9 +605,8 @@ public class DebugSearchEngine {
 			}
 			if (editorInput instanceof FileStoreEditorInput) {
 				File file = new File(((IURIEditorInput) editorInput).getURI());
-				if (file.exists()
-						&& file.getName().equalsIgnoreCase(
-								remotePath.getLastSegment())) {
+				if (file.exists() && file.getName()
+						.equalsIgnoreCase(remotePath.getLastSegment())) {
 					results.add(new PathEntry(file.getAbsolutePath(),
 							PathEntry.Type.EXTERNAL, file.getParentFile()));
 				}
@@ -553,9 +676,11 @@ public class DebugSearchEngine {
 	 */
 	private static void find(final File file, final VirtualPath path,
 			final IBuildpathEntry container, final List<PathEntry> results) {
-		if (!file.isDirectory() && file.getName().equals(path.getLastSegment())) {
-			Type type = (container.getEntryKind() == IBuildpathEntry.BPE_VARIABLE) ? Type.INCLUDE_VAR
-					: Type.INCLUDE_FOLDER;
+		if (!file.isDirectory()
+				&& file.getName().equals(path.getLastSegment())) {
+			Type type = (container
+					.getEntryKind() == IBuildpathEntry.BPE_VARIABLE)
+							? Type.INCLUDE_VAR : Type.INCLUDE_FOLDER;
 			PathEntry pathEntry = new PathEntry(file.getAbsolutePath(), type,
 					container);
 			results.add(pathEntry);
@@ -583,7 +708,8 @@ public class DebugSearchEngine {
 	 */
 	private static void find(final IResource resource, final VirtualPath path,
 			final List<PathEntry> results) throws InterruptedException {
-		if (resource == null || !resource.exists() || !resource.isAccessible()) {
+		if (resource == null || !resource.exists()
+				|| !resource.isAccessible()) {
 			return;
 		}
 		WorkspaceJob findJob = new WorkspaceJob("") { //$NON-NLS-1$
@@ -595,12 +721,11 @@ public class DebugSearchEngine {
 						if (!resource.isAccessible()) {
 							return false;
 						}
-						if (resource instanceof IFile
-								&& resource.getName().equals(
-										path.getLastSegment())) {
-							PathEntry pathEntry = new PathEntry(resource
-									.getFullPath().toString(), Type.WORKSPACE,
-									resource.getParent());
+						if (resource instanceof IFile && resource.getName()
+								.equals(path.getLastSegment())) {
+							PathEntry pathEntry = new PathEntry(
+									resource.getFullPath().toString(),
+									Type.WORKSPACE, resource.getParent());
 							results.add(pathEntry);
 						}
 						return true;
@@ -613,8 +738,8 @@ public class DebugSearchEngine {
 		findJob.join();
 	}
 
-	private static class PHPFilenameFilter implements FileFilter,
-			IContentTypeChangeListener {
+	private static class PHPFilenameFilter
+			implements FileFilter, IContentTypeChangeListener {
 		private Pattern phpFilePattern;
 
 		public PHPFilenameFilter() {
